--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hi Marissa, working hard!!!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Funk Analytics Home</title>
+</head>
+<body>
+
+<h1>Hi bae; working hard today! :)</h1>
+<p>This is a paragraph.</p>
+<script>alert('Random Javascript!');</script>
+</body>
+</html>
