--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>Hi bae; working hard today! :)</h1>
+<h1>Hi; working hard today! Stay tuned for dashboards... :)</h1>
 <p>This is a paragraph.</p>
-<script>alert('Random Javascript!');</script>
+<script>alert('Welcome person');</script>
 </body>
 </html>
