--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h1>Hi; working hard today! Stay tuned for dashboards... :)</h1>
-<p>This is a paragraph.</p>
-<script>alert('Welcome person');</script>
+<h1>Hi :)</h1>
+<p>This is a frontpage.</p>
 </body>
 </html>
